<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dfe4ea"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="418dp"
        android:layout_height="325dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@color/white"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteY="311dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="396dp"
        android:layout_height="286dp"
        android:layout_marginTop="4dp"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="188dp"
            android:layout_height="56dp"
            android:layout_marginStart="100dp"
            android:backgroundTint="#FFFFFF"
            android:buttonTint="#000000"
            android:text="@string/route_a"
            android:textAlignment="center"
            android:textColor="#FF5252"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="188dp"
            android:layout_height="56dp"
            android:layout_marginStart="100dp"
            android:buttonTint="#000000"
            android:text="@string/route_b"
            android:textAlignment="center"
            android:textColor="#0984e3"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="188dp"
            android:layout_height="56dp"
            android:layout_marginStart="100dp"
            android:buttonTint="#000000"
            android:text="@string/route_c"
            android:textAlignment="center"
            android:textColor="#009688"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="188dp"
            android:layout_height="55dp"
            android:layout_marginStart="100dp"
            android:buttonTint="#000000"
            android:text="@string/route_d"
            android:textAlignment="center"
            android:textColor="#EF6C00"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/start_button"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now_pojit"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.073" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="189dp"
        android:layout_height="68dp"
        android:text="@string/togglebutton"
        android:textColor="#455A64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <fragment
        android:id="@+id/mapView"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="359dp"
        android:layout_height="256dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,UnknownId" />


</androidx.constraintlayout.widget.ConstraintLayout>